--- a/web/src/main/webapp/resources/plugins/nprogress/index.html
+++ b/web/src/main/webapp/resources/plugins/nprogress/index.html
@@ -12,7 +12,7 @@
   <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
   <script src='nprogress.js'></script>
 
-  <script>if(location.hostname.match(/ricostacruz\.com$/)){var _gaq=_gaq||[];_gaq.push(["_setAccount","UA-20473929-1"]),_gaq.push(["_trackPageview"]),function(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}()}</script>
+  <script>if(location.hostname.match(/ricostacruz\.com$/)){var _gdaq=_gaq||[];_gaq.push(["_setAccount","UA-20473929-1"]),_gaq.push(["_trackPageview"]),function(){var a=document.createElement("script");a.type="text/javascript",a.async=!0,a.src=("https:"==document.location.protocol?"https://ssl":"http://www")+".google-analytics.com/ga.js";var b=document.getElementsByTagName("script")[0];b.parentNode.insertBefore(a,b)}()}</script>
 </head>
 
 <body style='display: none'>
